doc/grammar.txt
# Spreadsheet formula grammar

Cell -> Value | Expression
Expression -> Factor
Term -> Factor (("+"|"-") Factor)*
Factor -> Unary (("*"|"/") Unary)*
Unary -> [+-] Unary | Call
// Range -> Call (":" Call)*
Call -> Value ("(" Arguments ")")*
Value -> Identifier | Number | ( Expression ) | RangeReference



// Number -> \d+(.\d+)?
// Identifier -> [a-zA-Z]\w+
// Arguments -> (Expression (, Expression)*)?
